--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My portfolio</title>
+    <title>My Portfolio</title>
     <script src="https://kit.fontawesome.com/d96fb866d2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
@@ -53,7 +53,7 @@
                 
                 <div class="about-content-right">
                     <h3>Hello ,I am Pranali Hilal  <br><span>Computer Science and Engineering</span></h3>
-                    <p> I'm a CSE Third Year student at Shri Vithal Education And Research Institute Pandharpur.
+                    <p> I'm a CSE Final Year student at Shri Vithal Education And Research Institute Pandharpur.
                         Currently studying in third year of my degree.
                     </p>
                     <div class="home__social">
